--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -91,6 +92,35 @@
             <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2></h2>
+        <ul>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <h3></h3>
+            <p></p>
           </li>
         </ul>
       </section>
