--- a/index.html
+++ b/index.html
@@ -96,31 +96,37 @@
         </ul>
       </section>
       <section>
-        <h2></h2>
+        <h2>Our Portfolio</h2>
         <ul>
+          <img src="./images/BankingApp.jpg" alt="Banking App" width="360" />
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>Banking App</h3>
+            <p>App</p>
           </li>
+          <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" />
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
           </li>
+          <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" />
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>Meditation App</h3>
+            <p>App</p>
           </li>
+          <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" />
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
           </li>
+          <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" />
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
           </li>
+          <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" />
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
