--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -12,16 +16,19 @@
     <!-- HEADER CONTENT -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo-link">WebStudio</a>
         <ul>
-          <li><a href="#">Studio</a></li>
+          <li><a href="#" class="navigation-list-link">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="adress-list-link">info@devstudio.com</a
+            ><br />
+          </li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a><br /></li>
         </ul>
       </address>
@@ -134,7 +141,7 @@
 
     <footer>
       <!-- FOOTER CONTENT -->
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo-link">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing &#38;
         growth solutions.
