--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link
@@ -16,11 +19,11 @@
     <!-- HEADER CONTENT -->
     <header>
       <nav>
-        <a href="./index.html" class="logo-link">WebStudio</a>
+        <a href="./index.html" class="logo-link"><span>Web</span>Studio</a>
         <ul>
           <li><a href="#" class="navigation-list-link">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="#" class="navigation-list-link">Portfolio</a></li>
+          <li><a href="#" class="navigation-list-link">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -29,7 +32,9 @@
             <a href="mailto:info@devstudio.com" class="adress-list-link">info@devstudio.com</a
             ><br />
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a><br /></li>
+          <li>
+            <a href="tel:+110001111111" class="adress-list-link">+11 (000) 111-11-11</a><br />
+          </li>
         </ul>
       </address>
     </header>
@@ -37,37 +42,37 @@
     <!-- MAIN CONTENT -->
     <main>
       <!-- SECTION ONE -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section-one">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
       <!-- SECTION TWO -->
       <section>
-        <h2>Our Company</h2>
+        <h2 class="secondary-title">Our Company</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="additional-title">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="additional-title">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="additional-title">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="additional-title">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
@@ -78,61 +83,61 @@
 
       <!-- SECTION THREE -->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="secondary-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="additional-title">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
+            <h3 class="additional-title">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
+            <h3 class="additional-title">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
+            <h3 class="additional-title">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="secondary-title">Our Portfolio</h2>
         <ul>
           <li>
             <img src="./images/BankingApp.jpg" alt="Banking App" width="360" />
-            <h3>Banking App</h3>
+            <h3 class="additional-title">Banking App</h3>
             <p>App</p>
           </li>
           <li>
             <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" />
-            <h3>Cashless Payment</h3>
+            <h3 class="additional-title">Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" />
-            <h3>Meditation App</h3>
+            <h3 class="additional-title">Meditation App</h3>
             <p>App</p>
           </li>
           <li>
             <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" />
-            <h3>Taxi Service</h3>
+            <h3 class="additional-title">Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" />
-            <h3>Screen Illustrations</h3>
+            <h3 class="additional-title">Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
             <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" />
-            <h3>Online Courses</h3>
+            <h3 class="additional-title">Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
@@ -141,7 +146,7 @@
 
     <footer>
       <!-- FOOTER CONTENT -->
-      <a href="./index.html" class="logo-link">WebStudio</a>
+      <a href="./index.html" class="logo-link"><span>Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing &#38;
         growth solutions.
