--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- HEADER CONTENT -->
     <header>
       <nav>
-        <a href="./index.html" class="logo-link"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo-link-header"><span>Web</span>Studio</a>
         <ul>
           <li><a href="#" class="navigation-list-link">Studio</a></li>
           <li><a href="#" class="navigation-list-link">Portfolio</a></li>
@@ -52,28 +52,28 @@
         <ul>
           <li>
             <h3 class="additional-title">Strategy</h3>
-            <p>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
           <li>
             <h3 class="additional-title">Punctuality</h3>
-            <p>
+            <p class="text">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
           <li>
             <h3 class="additional-title">Diligence</h3>
-            <p>
+            <p class="text">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="additional-title">Technologies</h3>
-            <p>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
@@ -82,28 +82,28 @@
       </section>
 
       <!-- SECTION THREE -->
-      <section>
+      <section class="section-team">
         <h2 class="secondary-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="additional-title">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3 class="additional-title">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" />
             <h3 class="additional-title">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="additional-title">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -113,41 +113,41 @@
           <li>
             <img src="./images/BankingApp.jpg" alt="Banking App" width="360" />
             <h3 class="additional-title">Banking App</h3>
-            <p>App</p>
+            <p class="text">App</p>
           </li>
           <li>
             <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" />
             <h3 class="additional-title">Cashless Payment</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" />
             <h3 class="additional-title">Meditation App</h3>
-            <p>App</p>
+            <p class="text">App</p>
           </li>
           <li>
             <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" />
             <h3 class="additional-title">Taxi Service</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" />
             <h3 class="additional-title">Screen Illustrations</h3>
-            <p>Design</p>
+            <p class="text">Design</p>
           </li>
           <li>
             <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" />
             <h3 class="additional-title">Online Courses</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-content">
       <!-- FOOTER CONTENT -->
-      <a href="./index.html" class="logo-link"><span>Web</span>Studio</a>
-      <p>
+      <a href="./index.html" class="logo-link-footer"><span>Web</span>Studio</a>
+      <p class="text-footer">
         Increase the flow of customers and sales for your business with digital marketing &#38;
         growth solutions.
       </p>
