--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link href="./css/styles.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link
@@ -19,14 +20,14 @@
     <!-- HEADER CONTENT -->
     <header>
       <nav>
-        <a href="./index.html" class="logo-link-header"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo-link-header">Web<span>Studio</span></a>
         <ul>
-          <li><a href="#" class="navigation-list-link">Studio</a></li>
-          <li><a href="#" class="navigation-list-link">Portfolio</a></li>
-          <li><a href="#" class="navigation-list-link">Contacts</a></li>
+          <li><a href="./index.html" class="navigation-list-link">Studio</a></li>
+          <li><a href="" class="navigation-list-link">Portfolio</a></li>
+          <li><a href="" class="navigation-list-link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="adress-list-link">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="adress-list-link">info@devstudio.com</a
@@ -86,7 +87,12 @@
         <h2 class="secondary-title">Our Team</h2>
         <ul>
           <li>
-            <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
+            <img
+              class="image-content"
+              src="./images/MarkGuerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
             <h3 class="additional-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
@@ -107,6 +113,7 @@
           </li>
         </ul>
       </section>
+      <!-- SECTION FOUR -->
       <section>
         <h2 class="secondary-title">Our Portfolio</h2>
         <ul>
@@ -146,7 +153,9 @@
 
     <footer class="footer-content">
       <!-- FOOTER CONTENT -->
-      <a href="./index.html" class="logo-link-footer"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo-link-footer"
+        >Web<span class="color-logo-footer">Studio</span></a
+      >
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital marketing &#38;
         growth solutions.
