--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link href="./css/styles.css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -86,27 +83,22 @@
       <section class="section-team">
         <h2 class="secondary-title">Our Team</h2>
         <ul>
-          <li>
-            <img
-              class="image-content"
-              src="./images/MarkGuerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
+          <li class="list content">
+            <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="additional-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="list content">
             <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3 class="additional-title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list content">
             <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" />
             <h3 class="additional-title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="list content">
             <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="additional-title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
