--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
         <h2 class="secondary-title">Our Team</h2>
         <ul>
           <li class="list content">
-            <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
+            <img
+              class="images-content"
+              src="./images/MarkGuerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
             <h3 class="additional-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
