--- a/index.html
+++ b/index.html
@@ -83,22 +83,22 @@
       <section class="section-team">
         <h2 class="secondary-title">Our Team</h2>
         <ul>
-          <li class="list content">
+          <li class="list-content">
             <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="additional-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li class="list content">
+          <li class="list-content">
             <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3 class="additional-title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li class="list content">
+          <li class="list-content">
             <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" />
             <h3 class="additional-title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li class="list content">
+          <li class="list-content">
             <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="additional-title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
