--- a/index.html
+++ b/index.html
@@ -22,21 +22,18 @@
     <header>
       <nav>
         <a href="./index.html" class="logo-link-header">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="./index.html" class="navigation-list-link">Studio</a></li>
-          <li><a href="" class="navigation-list-link">Portfolio</a></li>
-          <li><a href="" class="navigation-list-link">Contacts</a></li>
+        <ul class="list">
+          <li><a href="./index.html" class="nav-link">Studio</a></li>
+          <li><a href="" class="nav-link">Portfolio</a></li>
+          <li><a href="" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
       <address class="adress-list-link">
-        <ul>
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="adress-list-link">info@devstudio.com</a
-            ><br />
+            <a href="mailto:info@devstudio.com" class="adress-link">info@devstudio.com</a><br />
           </li>
-          <li>
-            <a href="tel:+110001111111" class="adress-list-link">+11 (000) 111-11-11</a><br />
-          </li>
+          <li><a href="tel:+110001111111" class="adress-link">+11 (000) 111-11-11</a><br /></li>
         </ul>
       </address>
     </header>
@@ -50,7 +47,7 @@
       <!-- SECTION TWO -->
       <section>
         <h2 class="secondary-title">Our Company</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="additional-title">Strategy</h3>
             <p class="text">
@@ -84,7 +81,7 @@
       <!-- SECTION THREE -->
       <section class="section-team">
         <h2 class="secondary-title">Our Team</h2>
-        <ul>
+        <ul class="list">
           <li class="list-content">
             <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="additional-title">Mark Guerrero</h3>
@@ -110,7 +107,7 @@
       <!-- SECTION FOUR -->
       <section>
         <h2 class="secondary-title">Our Portfolio</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/BankingApp.jpg" alt="Banking App" width="360" />
             <h3 class="additional-title">Banking App</h3>
