--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
 
   <body>
     <!-- HEADER CONTENT -->
-    <header>
-      <nav>
-        <a href="./index.html" class="logo-link-header">Web<span>Studio</span></a>
-        <ul class="list">
-          <li><a href="./index.html" class="nav-link">Studio</a></li>
-          <li><a href="" class="nav-link">Portfolio</a></li>
-          <li><a href="" class="nav-link">Contacts</a></li>
+    <header class="page-header">
+      <nav class="page-navigation">
+        <a class="logotype link" href="./index.html"
+          >Web<span class="logotype-span">Studio</span></a
+        >
+        <ul class="menu list">
+          <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
+          <li class="menu-item"><a class="menu-link link" href="">Portfolio</a></li>
+          <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="adress-list-link">
-        <ul class="list">
+        <ul class="adress-list list">
           <li>
-            <a href="mailto:info@devstudio.com" class="adress-link">info@devstudio.com</a><br />
+            <a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
           </li>
-          <li><a href="tel:+110001111111" class="adress-link">+11 (000) 111-11-11</a><br /></li>
+          <li><a class="adress-link" href="tel:+110001111111">+11 (000) 111-11-11</a><br /></li>
         </ul>
       </address>
     </header>
@@ -45,34 +47,34 @@
       <!-- SECTION ONE -->
       <section class="section-one">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <button class="order-service-btn" type="button">Order Service</button>
       </section>
       <!-- SECTION TWO -->
-      <section>
+      <section class="section-two">
         <h2 class="secondary-title">Our Company</h2>
-        <ul class="list">
-          <li>
+        <ul class="Comp-Desc-list list">
+          <li class="comp-desc-list-item">
             <h3 class="additional-title">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
-          <li>
+          <li class="comp-desc-list-item">
             <h3 class="additional-title">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
-          <li>
+          <li class="comp-desc-list-item">
             <h3 class="additional-title">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="comp-desc-list-item">
             <h3 class="additional-title">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a deep passion for
@@ -82,25 +84,25 @@
         </ul>
       </section>
       <!-- SECTION THREE -->
-      <section class="section-team">
+      <section class="section-three">
         <h2 class="secondary-title">Our Team</h2>
-        <ul class="list">
-          <li class="list-content">
+        <ul class="team-list list">
+          <li class="team-list-item">
             <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="additional-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li class="list-content">
+          <li class="team-list-item">
             <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3 class="additional-title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li class="list-content">
+          <li class="team-list-item">
             <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" />
             <h3 class="additional-title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li class="list-content">
+          <li class="team-list-item">
             <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="additional-title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
@@ -108,35 +110,35 @@
         </ul>
       </section>
       <!-- SECTION FOUR -->
-      <section>
+      <section class="section-four">
         <h2 class="secondary-title">Our Portfolio</h2>
-        <ul class="list">
-          <li>
+        <ul class="portfolio-list list">
+          <li class="portfolio-list-item">
             <img src="./images/BankingApp.jpg" alt="Banking App" width="360" />
             <h3 class="additional-title">Banking App</h3>
             <p class="text">App</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" />
             <h3 class="additional-title">Cashless Payment</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" />
             <h3 class="additional-title">Meditation App</h3>
             <p class="text">App</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" />
             <h3 class="additional-title">Taxi Service</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" />
             <h3 class="additional-title">Screen Illustrations</h3>
             <p class="text">Design</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" />
             <h3 class="additional-title">Online Courses</h3>
             <p class="text">Marketing</p>
@@ -146,7 +148,7 @@
     </main>
     <!-- FOOTER CONTENT -->
     <footer class="footer-content">
-      <a href="./index.html" class="logo-link-footer"
+      <a href="./index.html" class="logo-link-footer link"
         >Web<span class="color-logo-footer">Studio</span></a
       >
       <p class="text-footer">
